--- a/src/css/Modal.css
+++ b/src/css/Modal.css
@@ -24,14 +24,14 @@
 
 .modalText p {
     font-family: 'Nunito', sans-serif;
-    font-weight: 600;
-    font-size: 22px;
+    font-weight: 300;
+    font-size: 18px;
     float: none;
     margin: 10px;
 }
 
 #modalGotIt {
-    margin: auto;
+    margin: 10px auto;
     padding-left: 30px;
     padding-right: 30px;
     animation: fadeOut 0.5s ;
